# azdeeploy

./: .env.example  .gitignore  README.md  pyproject.toml
azdeeploy/: __init__.py  cli.py  config.py
azdeeploy/azure/: __init__.py  app_service.py  commands.py  deepseek_client.py  logs.py  safety.py
azdeeploy/diagnose/: __init__.py  analyzer.py  formatter.py
azdeeploy/llm/: deepseek_client.py  prompts.py  schemas.py
azdeeploy/patches/: __init__.py  apply_patch.py  patch_parser.py
azdeeploy/scanner/: __init__.py  detect_node.py  detect_project.py  detect_python.py
examples/fastapi-broken-app/: .env.azure  README.md  main.py
tests/: __init__.py  test_patch_parser.py
